// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payments Callback it can cancel a payment 1`] = `
Object {
  "body": Object {
    "payment": Object {
      "hostedCheckoutSpecificOutput": Object {
        "hostedCheckoutId": 3066019730,
        "variant": "my-custom-template.html",
      },
      "id": "3066019730_0",
      "paymentOutput": Object {
        "acquiredAmount": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "amountOfMoney": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "amountPaid": -9223372036854776000,
        "cardPaymentMethodSpecificOutput": Object {
          "acquirerInformation": Object {
            "name": "string",
          },
          "authenticatedAmount": -9223372036854776000,
          "authorisationCode": "string",
          "card": Object {
            "bin": "string",
            "cardNumber": "string",
            "countryCode": "BE",
            "expiryDate": 529,
          },
          "currencyConversion": Object {
            "acceptedByUser": true,
            "proposal": Object {
              "baseAmount": Object {
                "amount": 1000,
                "currencyCode": "EUR",
              },
              "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
              "disclaimerReceipt": "",
              "rate": Object {
                "exchangeRate": 1.57,
                "invertedExchangeRate": 0.63694,
                "markUpRate": 3.12,
                "quotationDateTime": "2021-07-21T08:00:00Z",
                "source": "European Central Bank",
              },
              "targetAmount": Object {
                "amount": 1000,
                "currencyCode": "EUR",
              },
            },
          },
          "externalTokenLinked": Object {
            "ComputedToken": "string",
            "GTSComputedToken": "string",
            "GeneratedToken": "string",
          },
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "initialSchemeTransactionId": "string",
          "paymentOption": "string",
          "paymentProduct3208SpecificOutput": Object {
            "buyerCompliantBankMessage": "string",
          },
          "paymentProduct3209SpecificOutput": Object {
            "buyerCompliantBankMessage": "string",
          },
          "paymentProductId": 840,
          "schemeReferenceData": "string",
          "threeDSecureResults": Object {
            "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "appliedExemption": "low-value",
            "authenticationStatus": "Y",
            "cavv": "string",
            "challengeIndicator": "no-preference",
            "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "eci": "string",
            "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
            "flow": "frictionless",
            "liability": "issuer",
            "schemeEci": 5,
            "version": "2.2.0",
            "xid": "string",
          },
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "customer": Object {
          "device": Object {
            "ipAddressCountryCode": "BE",
          },
        },
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "mobilePaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "network": "string",
          "paymentData": Object {
            "dpan": "string",
            "expiryDate": 529,
          },
          "paymentProductId": 840,
          "threeDSecureResults": Object {
            "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "appliedExemption": "low-value",
            "authenticationStatus": "Y",
            "cavv": "string",
            "challengeIndicator": "no-preference",
            "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "eci": "string",
            "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
            "flow": "frictionless",
            "liability": "issuer",
            "schemeEci": 5,
            "version": "2.2.0",
            "xid": "string",
          },
        },
        "paymentMethod": "string",
        "redirectPaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "customerBankAccount": Object {
            "accountHolderName": "John Doe",
            "bic": "BOHIUS77",
            "iban": "BE01 0123 4567 8910",
          },
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentOption": "string",
          "paymentProduct5001SpecificOutput": Object {
            "authorisationCode": "string",
          },
          "paymentProduct5402SpecificOutput": Object {
            "brand": "string",
          },
          "paymentProduct5500SpecificOutput": Object {
            "paymentEndDate": "string",
            "paymentReference": "string",
            "paymentStartDate": "string",
          },
          "paymentProduct840SpecificOutput": Object {
            "billingAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "customerAccount": Object {
              "accountId": "customer-account@email.com",
              "companyName": "Customer Company Name",
              "countryCode": "BE",
              "customerAccountStatus": "verified",
              "customerAddressStatus": "confirmed",
              "firstName": "John",
              "payerId": "RRCYJUTFJGZTA",
              "surname": "Doe",
            },
            "customerAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "protectionEligibility": Object {
              "eligibility": "Eligible",
              "type": "ItemNotReceivedEligible",
            },
          },
          "paymentProductId": 840,
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "references": Object {
          "merchantParameters": "SessionID=126548354&ShopperID=73541312",
          "merchantReference": "your-order-6372",
        },
        "sepaDirectDebitPaymentMethodSpecificOutput": Object {
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentProduct771SpecificOutput": Object {
            "mandateReference": "string",
          },
          "paymentProductId": 840,
        },
        "surchargeSpecificOutput": Object {
          "mode": "pass-through",
          "surchargeAmount": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "surchargeRate": Object {
            "adValoremRate": 2.5,
            "specificRate": 20,
            "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
            "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
          },
        },
      },
      "status": "CREATED",
      "statusOutput": Object {
        "errors": Array [
          Object {
            "category": "PAYMENT_PLATFORM_ERROR",
            "code": 50001130,
            "errorCode": 50001130,
            "httpStatusCode": 404,
            "id": "UNKNOWN_PAYMENT_ID",
            "message": "Authorisation declined",
            "propertyName": "paymentId",
            "retriable": true,
          },
        ],
        "isAuthorized": true,
        "isCancellable": true,
        "isRefundable": true,
        "statusCategory": "CREATED",
        "statusCode": -2147483648,
        "statusCodeChangeDateTime": "string",
      },
    },
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Callback it can capture a payment 1`] = `
Object {
  "body": Object {
    "captureOutput": Object {
      "acquiredAmount": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountPaid": -9223372036854776000,
      "cardPaymentMethodSpecificOutput": Object {
        "acquirerInformation": Object {
          "name": "string",
        },
        "authenticatedAmount": -9223372036854776000,
        "authorisationCode": "string",
        "card": Object {
          "bin": "string",
          "cardNumber": "string",
          "countryCode": "BE",
          "expiryDate": 529,
        },
        "currencyConversion": Object {
          "acceptedByUser": true,
          "proposal": Object {
            "baseAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
            "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
            "disclaimerReceipt": "",
            "rate": Object {
              "exchangeRate": 1.57,
              "invertedExchangeRate": 0.63694,
              "markUpRate": 3.12,
              "quotationDateTime": "2021-07-21T08:00:00Z",
              "source": "European Central Bank",
            },
            "targetAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
          },
        },
        "externalTokenLinked": Object {
          "ComputedToken": "string",
          "GTSComputedToken": "string",
          "GeneratedToken": "string",
        },
        "fraudResults": Object {
          "avsResult": "string",
          "cvvResult": "string",
          "fraudServiceResult": "string",
        },
        "initialSchemeTransactionId": "string",
        "paymentOption": "string",
        "paymentProduct3208SpecificOutput": Object {
          "buyerCompliantBankMessage": "string",
        },
        "paymentProduct3209SpecificOutput": Object {
          "buyerCompliantBankMessage": "string",
        },
        "paymentProductId": 840,
        "schemeReferenceData": "string",
        "threeDSecureResults": Object {
          "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "appliedExemption": "low-value",
          "authenticationStatus": "Y",
          "cavv": "string",
          "challengeIndicator": "no-preference",
          "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "eci": "string",
          "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
          "flow": "frictionless",
          "liability": "issuer",
          "schemeEci": 5,
          "version": "2.2.0",
          "xid": "string",
        },
        "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      },
      "merchantParameters": "SessionID=126548354&ShopperID=73541312",
      "mobilePaymentMethodSpecificOutput": Object {
        "authorisationCode": "string",
        "fraudResults": Object {
          "avsResult": "string",
          "cvvResult": "string",
          "fraudServiceResult": "string",
        },
        "network": "string",
        "paymentData": Object {
          "dpan": "string",
          "expiryDate": 529,
        },
        "paymentProductId": 840,
        "threeDSecureResults": Object {
          "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "appliedExemption": "low-value",
          "authenticationStatus": "Y",
          "cavv": "string",
          "challengeIndicator": "no-preference",
          "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "eci": "string",
          "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
          "flow": "frictionless",
          "liability": "issuer",
          "schemeEci": 5,
          "version": "2.2.0",
          "xid": "string",
        },
      },
      "paymentMethod": "string",
      "redirectPaymentMethodSpecificOutput": Object {
        "authorisationCode": "string",
        "customerBankAccount": Object {
          "accountHolderName": "John Doe",
          "bic": "BOHIUS77",
          "iban": "BE01 0123 4567 8910",
        },
        "fraudResults": Object {
          "fraudServiceResult": "string",
        },
        "paymentOption": "string",
        "paymentProduct5001SpecificOutput": Object {
          "authorisationCode": "string",
        },
        "paymentProduct5402SpecificOutput": Object {
          "brand": "string",
        },
        "paymentProduct5500SpecificOutput": Object {
          "paymentEndDate": "string",
          "paymentReference": "string",
          "paymentStartDate": "string",
        },
        "paymentProduct840SpecificOutput": Object {
          "billingAddress": Object {
            "additionalInfo": "floor 9",
            "city": "Zaventem",
            "countryCode": "BE",
            "houseNumber": 3,
            "state": "string",
            "street": "Da Vinci street",
            "zip": 1930,
          },
          "customerAccount": Object {
            "accountId": "customer-account@email.com",
            "companyName": "Customer Company Name",
            "countryCode": "BE",
            "customerAccountStatus": "verified",
            "customerAddressStatus": "confirmed",
            "firstName": "John",
            "payerId": "RRCYJUTFJGZTA",
            "surname": "Doe",
          },
          "customerAddress": Object {
            "additionalInfo": "floor 9",
            "city": "Zaventem",
            "countryCode": "BE",
            "houseNumber": 3,
            "state": "string",
            "street": "Da Vinci street",
            "zip": 1930,
          },
          "protectionEligibility": Object {
            "eligibility": "Eligible",
            "type": "ItemNotReceivedEligible",
          },
        },
        "paymentProductId": 840,
        "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      },
      "references": Object {
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "merchantReference": "your-order-6372",
      },
      "sepaDirectDebitPaymentMethodSpecificOutput": Object {
        "fraudResults": Object {
          "fraudServiceResult": "string",
        },
        "paymentProduct771SpecificOutput": Object {
          "mandateReference": "string",
        },
        "paymentProductId": 840,
      },
      "surchargeSpecificOutput": Object {
        "mode": "pass-through",
        "surchargeAmount": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "surchargeRate": Object {
          "adValoremRate": 2.5,
          "specificRate": 20,
          "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
          "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
        },
      },
    },
    "id": "3066019730_1",
    "status": "CREATED",
    "statusOutput": Object {
      "statusCode": -2147483648,
    },
  },
  "isSuccess": true,
  "status": 201,
}
`;

exports[`Payments Callback it can complete a payment 1`] = `
Object {
  "body": Object {
    "creationOutput": Object {
      "externalReference": "string",
      "isNewToken": true,
      "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      "tokenizationSucceeded": true,
    },
    "merchantAction": Object {
      "actionType": "string",
      "redirectData": Object {
        "RETURNMAC": "fecab85c-9b0e-42ee-a9d9-ebb69b0c2eb0",
        "redirectURL": "onlinepayments.com/hostedcheckout/Payment/Form/b614f1c655fa40e08b2dcfd6dededd24",
      },
    },
    "payment": Object {
      "hostedCheckoutSpecificOutput": Object {
        "hostedCheckoutId": 3066019730,
        "variant": "my-custom-template.html",
      },
      "id": "string",
      "paymentOutput": Object {
        "amountOfMoney": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "amountPaid": -9223372036854776000,
        "cardPaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "card": Object {
            "cardNumber": "string",
            "expiryDate": "stri",
          },
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "initialSchemeTransactionId": "string",
          "paymentProductId": 840,
          "threeDSecureResults": Object {
            "eci": "string",
            "xid": "string",
          },
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "mobilePaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "network": "string",
          "paymentData": Object {
            "dpan": "string",
            "expiryDate": "stri",
          },
          "paymentProductId": 840,
          "threeDSecureResults": Object {
            "eci": "string",
            "xid": "string",
          },
        },
        "paymentMethod": "string",
        "redirectPaymentMethodSpecificOutput": Object {
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentProduct840SpecificOutput": Object {
            "billingAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "customerAccount": Object {
              "accountId": "customer-account@email.com",
              "companyName": "Customer Company Name",
              "countryCode": "BE",
              "customerAccountStatus": "verified",
              "customerAddressStatus": "confirmed",
              "firstName": "John",
              "payerId": "RRCYJUTFJGZTA",
              "surname": "Doe",
            },
            "customerAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "protectionEligibility": Object {
              "eligibility": "Eligible",
              "type": "ItemNotReceivedEligible",
            },
          },
          "paymentProductId": 840,
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "references": Object {
          "merchantReference": "your-order-6372",
        },
        "sepaDirectDebitPaymentMethodSpecificOutput": Object {
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentProduct771SpecificOutput": Object {},
          "paymentProductId": 840,
        },
      },
      "status": "CREATED",
      "statusOutput": Object {
        "errors": Array [
          Object {
            "category": "DIRECT_PLATFORM_ERROR",
            "code": 50001130,
            "httpStatusCode": 404,
            "id": "UNKNOWN_PAYMENT_ID",
            "message": "Authorisation declined",
            "propertyName": "paymentId",
          },
        ],
        "isAuthorized": true,
        "isCancellable": true,
        "isRefundable": true,
        "statusCategory": "CREATED",
        "statusCode": -2147483648,
        "statusCodeChangeDateTime": "string",
      },
    },
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Callback it can create a payment 1`] = `
Object {
  "body": Object {
    "creationOutput": Object {
      "externalReference": "string",
      "isNewToken": true,
      "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      "tokenizationSucceeded": true,
    },
    "merchantAction": Object {
      "actionType": "string",
      "redirectData": Object {
        "RETURNMAC": "fecab85c-9b0e-42ee-a9d9-ebb69b0c2eb0",
        "redirectURL": "string",
      },
      "showFormData": Object {
        "paymentProduct5404": Object {
          "appSwitchLink": "string",
          "qrCodeUrl": "string",
        },
        "paymentProduct5407": Object {
          "pairingToken": "string",
          "qrCode": "string",
        },
      },
    },
    "payment": Object {
      "hostedCheckoutSpecificOutput": Object {
        "hostedCheckoutId": 3066019730,
        "variant": "my-custom-template.html",
      },
      "id": "3066019730_0",
      "paymentOutput": Object {
        "acquiredAmount": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "amountOfMoney": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "amountPaid": -9223372036854776000,
        "cardPaymentMethodSpecificOutput": Object {
          "acquirerInformation": Object {
            "name": "string",
          },
          "authenticatedAmount": -9223372036854776000,
          "authorisationCode": "string",
          "card": Object {
            "bin": "string",
            "cardNumber": "string",
            "countryCode": "BE",
            "expiryDate": 529,
          },
          "currencyConversion": Object {
            "acceptedByUser": true,
            "proposal": Object {
              "baseAmount": Object {
                "amount": 1000,
                "currencyCode": "EUR",
              },
              "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
              "disclaimerReceipt": "",
              "rate": Object {
                "exchangeRate": 1.57,
                "invertedExchangeRate": 0.63694,
                "markUpRate": 3.12,
                "quotationDateTime": "2021-07-21T08:00:00Z",
                "source": "European Central Bank",
              },
              "targetAmount": Object {
                "amount": 1000,
                "currencyCode": "EUR",
              },
            },
          },
          "externalTokenLinked": Object {
            "ComputedToken": "string",
            "GTSComputedToken": "string",
            "GeneratedToken": "string",
          },
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "initialSchemeTransactionId": "string",
          "paymentOption": "string",
          "paymentProduct3208SpecificOutput": Object {
            "buyerCompliantBankMessage": "string",
          },
          "paymentProduct3209SpecificOutput": Object {
            "buyerCompliantBankMessage": "string",
          },
          "paymentProductId": 840,
          "schemeReferenceData": "string",
          "threeDSecureResults": Object {
            "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "appliedExemption": "low-value",
            "authenticationStatus": "Y",
            "cavv": "string",
            "challengeIndicator": "no-preference",
            "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "eci": "string",
            "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
            "flow": "frictionless",
            "liability": "issuer",
            "schemeEci": 5,
            "version": "2.2.0",
            "xid": "string",
          },
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "customer": Object {
          "device": Object {
            "ipAddressCountryCode": "BE",
          },
        },
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "mobilePaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "network": "string",
          "paymentData": Object {
            "dpan": "string",
            "expiryDate": 529,
          },
          "paymentProductId": 840,
          "threeDSecureResults": Object {
            "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "appliedExemption": "low-value",
            "authenticationStatus": "Y",
            "cavv": "string",
            "challengeIndicator": "no-preference",
            "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "eci": "string",
            "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
            "flow": "frictionless",
            "liability": "issuer",
            "schemeEci": 5,
            "version": "2.2.0",
            "xid": "string",
          },
        },
        "paymentMethod": "string",
        "redirectPaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "customerBankAccount": Object {
            "accountHolderName": "John Doe",
            "bic": "BOHIUS77",
            "iban": "BE01 0123 4567 8910",
          },
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentOption": "string",
          "paymentProduct5001SpecificOutput": Object {
            "authorisationCode": "string",
          },
          "paymentProduct5402SpecificOutput": Object {
            "brand": "string",
          },
          "paymentProduct5500SpecificOutput": Object {
            "paymentEndDate": "string",
            "paymentReference": "string",
            "paymentStartDate": "string",
          },
          "paymentProduct840SpecificOutput": Object {
            "billingAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "customerAccount": Object {
              "accountId": "customer-account@email.com",
              "companyName": "Customer Company Name",
              "countryCode": "BE",
              "customerAccountStatus": "verified",
              "customerAddressStatus": "confirmed",
              "firstName": "John",
              "payerId": "RRCYJUTFJGZTA",
              "surname": "Doe",
            },
            "customerAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "protectionEligibility": Object {
              "eligibility": "Eligible",
              "type": "ItemNotReceivedEligible",
            },
          },
          "paymentProductId": 840,
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "references": Object {
          "merchantParameters": "SessionID=126548354&ShopperID=73541312",
          "merchantReference": "your-order-6372",
        },
        "sepaDirectDebitPaymentMethodSpecificOutput": Object {
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentProduct771SpecificOutput": Object {
            "mandateReference": "string",
          },
          "paymentProductId": 840,
        },
        "surchargeSpecificOutput": Object {
          "mode": "pass-through",
          "surchargeAmount": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "surchargeRate": Object {
            "adValoremRate": 2.5,
            "specificRate": 20,
            "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
            "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
          },
        },
      },
      "status": "CREATED",
      "statusOutput": Object {
        "errors": Array [
          Object {
            "category": "PAYMENT_PLATFORM_ERROR",
            "code": 50001130,
            "errorCode": 50001130,
            "httpStatusCode": 404,
            "id": "UNKNOWN_PAYMENT_ID",
            "message": "Authorisation declined",
            "propertyName": "paymentId",
            "retriable": true,
          },
        ],
        "isAuthorized": true,
        "isCancellable": true,
        "isRefundable": true,
        "statusCategory": "CREATED",
        "statusCode": -2147483648,
        "statusCodeChangeDateTime": "string",
      },
    },
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Callback it can get a payment 1`] = `
Object {
  "body": Object {
    "hostedCheckoutSpecificOutput": Object {
      "hostedCheckoutId": 3066019730,
      "variant": "my-custom-template.html",
    },
    "id": "3066019730_0",
    "paymentOutput": Object {
      "acquiredAmount": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountPaid": -9223372036854776000,
      "cardPaymentMethodSpecificOutput": Object {
        "acquirerInformation": Object {
          "name": "string",
        },
        "authenticatedAmount": -9223372036854776000,
        "authorisationCode": "string",
        "card": Object {
          "bin": "string",
          "cardNumber": "string",
          "countryCode": "BE",
          "expiryDate": 529,
        },
        "currencyConversion": Object {
          "acceptedByUser": true,
          "proposal": Object {
            "baseAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
            "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
            "disclaimerReceipt": "",
            "rate": Object {
              "exchangeRate": 1.57,
              "invertedExchangeRate": 0.63694,
              "markUpRate": 3.12,
              "quotationDateTime": "2021-07-21T08:00:00Z",
              "source": "European Central Bank",
            },
            "targetAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
          },
        },
        "externalTokenLinked": Object {
          "ComputedToken": "string",
          "GTSComputedToken": "string",
          "GeneratedToken": "string",
        },
        "fraudResults": Object {
          "avsResult": "string",
          "cvvResult": "string",
          "fraudServiceResult": "string",
        },
        "initialSchemeTransactionId": "string",
        "paymentOption": "string",
        "paymentProduct3208SpecificOutput": Object {
          "buyerCompliantBankMessage": "string",
        },
        "paymentProduct3209SpecificOutput": Object {
          "buyerCompliantBankMessage": "string",
        },
        "paymentProductId": 840,
        "schemeReferenceData": "string",
        "threeDSecureResults": Object {
          "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "appliedExemption": "low-value",
          "authenticationStatus": "Y",
          "cavv": "string",
          "challengeIndicator": "no-preference",
          "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "eci": "string",
          "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
          "flow": "frictionless",
          "liability": "issuer",
          "schemeEci": 5,
          "version": "2.2.0",
          "xid": "string",
        },
        "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      },
      "customer": Object {
        "device": Object {
          "ipAddressCountryCode": "BE",
        },
      },
      "merchantParameters": "SessionID=126548354&ShopperID=73541312",
      "mobilePaymentMethodSpecificOutput": Object {
        "authorisationCode": "string",
        "fraudResults": Object {
          "avsResult": "string",
          "cvvResult": "string",
          "fraudServiceResult": "string",
        },
        "network": "string",
        "paymentData": Object {
          "dpan": "string",
          "expiryDate": 529,
        },
        "paymentProductId": 840,
        "threeDSecureResults": Object {
          "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "appliedExemption": "low-value",
          "authenticationStatus": "Y",
          "cavv": "string",
          "challengeIndicator": "no-preference",
          "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "eci": "string",
          "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
          "flow": "frictionless",
          "liability": "issuer",
          "schemeEci": 5,
          "version": "2.2.0",
          "xid": "string",
        },
      },
      "paymentMethod": "string",
      "redirectPaymentMethodSpecificOutput": Object {
        "authorisationCode": "string",
        "customerBankAccount": Object {
          "accountHolderName": "John Doe",
          "bic": "BOHIUS77",
          "iban": "BE01 0123 4567 8910",
        },
        "fraudResults": Object {
          "fraudServiceResult": "string",
        },
        "paymentOption": "string",
        "paymentProduct5001SpecificOutput": Object {
          "authorisationCode": "string",
        },
        "paymentProduct5402SpecificOutput": Object {
          "brand": "string",
        },
        "paymentProduct5500SpecificOutput": Object {
          "paymentEndDate": "string",
          "paymentReference": "string",
          "paymentStartDate": "string",
        },
        "paymentProduct840SpecificOutput": Object {
          "billingAddress": Object {
            "additionalInfo": "floor 9",
            "city": "Zaventem",
            "countryCode": "BE",
            "houseNumber": 3,
            "state": "string",
            "street": "Da Vinci street",
            "zip": 1930,
          },
          "customerAccount": Object {
            "accountId": "customer-account@email.com",
            "companyName": "Customer Company Name",
            "countryCode": "BE",
            "customerAccountStatus": "verified",
            "customerAddressStatus": "confirmed",
            "firstName": "John",
            "payerId": "RRCYJUTFJGZTA",
            "surname": "Doe",
          },
          "customerAddress": Object {
            "additionalInfo": "floor 9",
            "city": "Zaventem",
            "countryCode": "BE",
            "houseNumber": 3,
            "state": "string",
            "street": "Da Vinci street",
            "zip": 1930,
          },
          "protectionEligibility": Object {
            "eligibility": "Eligible",
            "type": "ItemNotReceivedEligible",
          },
        },
        "paymentProductId": 840,
        "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      },
      "references": Object {
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "merchantReference": "your-order-6372",
      },
      "sepaDirectDebitPaymentMethodSpecificOutput": Object {
        "fraudResults": Object {
          "fraudServiceResult": "string",
        },
        "paymentProduct771SpecificOutput": Object {
          "mandateReference": "string",
        },
        "paymentProductId": 840,
      },
      "surchargeSpecificOutput": Object {
        "mode": "pass-through",
        "surchargeAmount": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "surchargeRate": Object {
          "adValoremRate": 2.5,
          "specificRate": 20,
          "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
          "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
        },
      },
    },
    "status": "CREATED",
    "statusOutput": Object {
      "errors": Array [
        Object {
          "category": "PAYMENT_PLATFORM_ERROR",
          "code": 50001130,
          "errorCode": 50001130,
          "httpStatusCode": 404,
          "id": "UNKNOWN_PAYMENT_ID",
          "message": "Authorisation declined",
          "propertyName": "paymentId",
          "retriable": true,
        },
      ],
      "isAuthorized": true,
      "isCancellable": true,
      "isRefundable": true,
      "statusCategory": "CREATED",
      "statusCode": -2147483648,
      "statusCodeChangeDateTime": "string",
    },
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Callback it can get a refunds 1`] = `
Object {
  "body": Object {
    "refunds": Array [
      Object {
        "id": "3066019730_1",
        "refundOutput": Object {
          "amountOfMoney": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "amountPaid": -9223372036854776000,
          "cardRefundMethodSpecificOutput": Object {
            "currencyConversion": Object {
              "acceptedByUser": true,
              "proposal": Object {
                "baseAmount": Object {
                  "amount": 1000,
                  "currencyCode": "EUR",
                },
                "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
                "disclaimerReceipt": "",
                "rate": Object {
                  "exchangeRate": 1.57,
                  "invertedExchangeRate": 0.63694,
                  "markUpRate": 3.12,
                  "quotationDateTime": "2021-07-21T08:00:00Z",
                  "source": "European Central Bank",
                },
                "targetAmount": Object {
                  "amount": 1000,
                  "currencyCode": "EUR",
                },
              },
            },
            "totalAmountPaid": -9223372036854776000,
            "totalAmountRefunded": -9223372036854776000,
          },
          "eWalletRefundMethodSpecificOutput": Object {
            "paymentProduct840SpecificOutput": Object {
              "customerAccount": Object {
                "customerAccountStatus": "string",
                "customerAddressStatus": "string",
                "payerId": "RRCYJUTFJGZTA",
              },
            },
            "totalAmountPaid": -9223372036854776000,
            "totalAmountRefunded": -9223372036854776000,
          },
          "merchantParameters": "SessionID=126548354&ShopperID=73541312",
          "mobileRefundMethodSpecificOutput": Object {
            "network": "string",
            "totalAmountPaid": -9223372036854776000,
            "totalAmountRefunded": -9223372036854776000,
          },
          "paymentMethod": "string",
          "redirectRefundMethodSpecificOutput": Object {
            "totalAmountPaid": -9223372036854776000,
            "totalAmountRefunded": -9223372036854776000,
          },
          "references": Object {
            "merchantParameters": "SessionID=126548354&ShopperID=73541312",
            "merchantReference": "your-order-6372",
          },
        },
        "status": "CREATED",
        "statusOutput": Object {
          "errors": Array [
            Object {
              "category": "PAYMENT_PLATFORM_ERROR",
              "code": 50001130,
              "errorCode": 50001130,
              "httpStatusCode": 404,
              "id": "UNKNOWN_PAYMENT_ID",
              "message": "Authorisation declined",
              "propertyName": "paymentId",
              "retriable": true,
            },
          ],
          "isCancellable": true,
          "statusCategory": "CREATED",
          "statusCode": -2147483648,
          "statusCodeChangeDateTime": "string",
        },
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Callback it can get captures 1`] = `
Object {
  "body": Object {
    "captures": Array [
      Object {
        "captureOutput": Object {
          "acquiredAmount": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "amountOfMoney": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "amountPaid": -9223372036854776000,
          "cardPaymentMethodSpecificOutput": Object {
            "acquirerInformation": Object {
              "name": "string",
            },
            "authenticatedAmount": -9223372036854776000,
            "authorisationCode": "string",
            "card": Object {
              "bin": "string",
              "cardNumber": "string",
              "countryCode": "BE",
              "expiryDate": 529,
            },
            "currencyConversion": Object {
              "acceptedByUser": true,
              "proposal": Object {
                "baseAmount": Object {
                  "amount": 1000,
                  "currencyCode": "EUR",
                },
                "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
                "disclaimerReceipt": "",
                "rate": Object {
                  "exchangeRate": 1.57,
                  "invertedExchangeRate": 0.63694,
                  "markUpRate": 3.12,
                  "quotationDateTime": "2021-07-21T08:00:00Z",
                  "source": "European Central Bank",
                },
                "targetAmount": Object {
                  "amount": 1000,
                  "currencyCode": "EUR",
                },
              },
            },
            "externalTokenLinked": Object {
              "ComputedToken": "string",
              "GTSComputedToken": "string",
              "GeneratedToken": "string",
            },
            "fraudResults": Object {
              "avsResult": "string",
              "cvvResult": "string",
              "fraudServiceResult": "string",
            },
            "initialSchemeTransactionId": "string",
            "paymentOption": "string",
            "paymentProduct3208SpecificOutput": Object {
              "buyerCompliantBankMessage": "string",
            },
            "paymentProduct3209SpecificOutput": Object {
              "buyerCompliantBankMessage": "string",
            },
            "paymentProductId": 840,
            "schemeReferenceData": "string",
            "threeDSecureResults": Object {
              "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
              "appliedExemption": "low-value",
              "authenticationStatus": "Y",
              "cavv": "string",
              "challengeIndicator": "no-preference",
              "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
              "eci": "string",
              "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
              "flow": "frictionless",
              "liability": "issuer",
              "schemeEci": 5,
              "version": "2.2.0",
              "xid": "string",
            },
            "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
          },
          "merchantParameters": "SessionID=126548354&ShopperID=73541312",
          "mobilePaymentMethodSpecificOutput": Object {
            "authorisationCode": "string",
            "fraudResults": Object {
              "avsResult": "string",
              "cvvResult": "string",
              "fraudServiceResult": "string",
            },
            "network": "string",
            "paymentData": Object {
              "dpan": "string",
              "expiryDate": 529,
            },
            "paymentProductId": 840,
            "threeDSecureResults": Object {
              "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
              "appliedExemption": "low-value",
              "authenticationStatus": "Y",
              "cavv": "string",
              "challengeIndicator": "no-preference",
              "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
              "eci": "string",
              "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
              "flow": "frictionless",
              "liability": "issuer",
              "schemeEci": 5,
              "version": "2.2.0",
              "xid": "string",
            },
          },
          "paymentMethod": "string",
          "redirectPaymentMethodSpecificOutput": Object {
            "authorisationCode": "string",
            "customerBankAccount": Object {
              "accountHolderName": "John Doe",
              "bic": "BOHIUS77",
              "iban": "BE01 0123 4567 8910",
            },
            "fraudResults": Object {
              "fraudServiceResult": "string",
            },
            "paymentOption": "string",
            "paymentProduct5001SpecificOutput": Object {
              "authorisationCode": "string",
            },
            "paymentProduct5402SpecificOutput": Object {
              "brand": "string",
            },
            "paymentProduct5500SpecificOutput": Object {
              "paymentEndDate": "string",
              "paymentReference": "string",
              "paymentStartDate": "string",
            },
            "paymentProduct840SpecificOutput": Object {
              "billingAddress": Object {
                "additionalInfo": "floor 9",
                "city": "Zaventem",
                "countryCode": "BE",
                "houseNumber": 3,
                "state": "string",
                "street": "Da Vinci street",
                "zip": 1930,
              },
              "customerAccount": Object {
                "accountId": "customer-account@email.com",
                "companyName": "Customer Company Name",
                "countryCode": "BE",
                "customerAccountStatus": "verified",
                "customerAddressStatus": "confirmed",
                "firstName": "John",
                "payerId": "RRCYJUTFJGZTA",
                "surname": "Doe",
              },
              "customerAddress": Object {
                "additionalInfo": "floor 9",
                "city": "Zaventem",
                "countryCode": "BE",
                "houseNumber": 3,
                "state": "string",
                "street": "Da Vinci street",
                "zip": 1930,
              },
              "protectionEligibility": Object {
                "eligibility": "Eligible",
                "type": "ItemNotReceivedEligible",
              },
            },
            "paymentProductId": 840,
            "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
          },
          "references": Object {
            "merchantParameters": "SessionID=126548354&ShopperID=73541312",
            "merchantReference": "your-order-6372",
          },
          "sepaDirectDebitPaymentMethodSpecificOutput": Object {
            "fraudResults": Object {
              "fraudServiceResult": "string",
            },
            "paymentProduct771SpecificOutput": Object {
              "mandateReference": "string",
            },
            "paymentProductId": 840,
          },
          "surchargeSpecificOutput": Object {
            "mode": "pass-through",
            "surchargeAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
            "surchargeRate": Object {
              "adValoremRate": 2.5,
              "specificRate": 20,
              "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
              "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
            },
          },
        },
        "id": "string",
        "status": "CREATED",
        "statusOutput": Object {
          "statusCode": -2147483648,
        },
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Callback it can refund a payment 1`] = `
Object {
  "body": Object {
    "id": "3066019730_1",
    "refundOutput": Object {
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountPaid": -9223372036854776000,
      "cardRefundMethodSpecificOutput": Object {
        "currencyConversion": Object {
          "acceptedByUser": true,
          "proposal": Object {
            "baseAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
            "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
            "disclaimerReceipt": "",
            "rate": Object {
              "exchangeRate": 1.57,
              "invertedExchangeRate": 0.63694,
              "markUpRate": 3.12,
              "quotationDateTime": "2021-07-21T08:00:00Z",
              "source": "European Central Bank",
            },
            "targetAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
          },
        },
        "totalAmountPaid": -9223372036854776000,
        "totalAmountRefunded": -9223372036854776000,
      },
      "eWalletRefundMethodSpecificOutput": Object {
        "paymentProduct840SpecificOutput": Object {
          "customerAccount": Object {
            "customerAccountStatus": "string",
            "customerAddressStatus": "string",
            "payerId": "RRCYJUTFJGZTA",
          },
        },
        "totalAmountPaid": -9223372036854776000,
        "totalAmountRefunded": -9223372036854776000,
      },
      "merchantParameters": "SessionID=126548354&ShopperID=73541312",
      "mobileRefundMethodSpecificOutput": Object {
        "network": "string",
        "totalAmountPaid": -9223372036854776000,
        "totalAmountRefunded": -9223372036854776000,
      },
      "paymentMethod": "string",
      "redirectRefundMethodSpecificOutput": Object {
        "totalAmountPaid": -9223372036854776000,
        "totalAmountRefunded": -9223372036854776000,
      },
      "references": Object {
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "merchantReference": "your-order-6372",
      },
    },
    "status": "CREATED",
    "statusOutput": Object {
      "errors": Array [
        Object {
          "category": "PAYMENT_PLATFORM_ERROR",
          "code": 50001130,
          "errorCode": 50001130,
          "httpStatusCode": 404,
          "id": "UNKNOWN_PAYMENT_ID",
          "message": "Authorisation declined",
          "propertyName": "paymentId",
          "retriable": true,
        },
      ],
      "isCancellable": true,
      "statusCategory": "CREATED",
      "statusCode": -2147483648,
      "statusCodeChangeDateTime": "string",
    },
  },
  "isSuccess": true,
  "status": 201,
}
`;

exports[`Payments Promises it can cancel a payment 1`] = `
Object {
  "body": Object {
    "payment": Object {
      "hostedCheckoutSpecificOutput": Object {
        "hostedCheckoutId": 3066019730,
        "variant": "my-custom-template.html",
      },
      "id": "3066019730_0",
      "paymentOutput": Object {
        "acquiredAmount": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "amountOfMoney": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "amountPaid": -9223372036854776000,
        "cardPaymentMethodSpecificOutput": Object {
          "acquirerInformation": Object {
            "name": "string",
          },
          "authenticatedAmount": -9223372036854776000,
          "authorisationCode": "string",
          "card": Object {
            "bin": "string",
            "cardNumber": "string",
            "countryCode": "BE",
            "expiryDate": 529,
          },
          "currencyConversion": Object {
            "acceptedByUser": true,
            "proposal": Object {
              "baseAmount": Object {
                "amount": 1000,
                "currencyCode": "EUR",
              },
              "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
              "disclaimerReceipt": "",
              "rate": Object {
                "exchangeRate": 1.57,
                "invertedExchangeRate": 0.63694,
                "markUpRate": 3.12,
                "quotationDateTime": "2021-07-21T08:00:00Z",
                "source": "European Central Bank",
              },
              "targetAmount": Object {
                "amount": 1000,
                "currencyCode": "EUR",
              },
            },
          },
          "externalTokenLinked": Object {
            "ComputedToken": "string",
            "GTSComputedToken": "string",
            "GeneratedToken": "string",
          },
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "initialSchemeTransactionId": "string",
          "paymentOption": "string",
          "paymentProduct3208SpecificOutput": Object {
            "buyerCompliantBankMessage": "string",
          },
          "paymentProduct3209SpecificOutput": Object {
            "buyerCompliantBankMessage": "string",
          },
          "paymentProductId": 840,
          "schemeReferenceData": "string",
          "threeDSecureResults": Object {
            "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "appliedExemption": "low-value",
            "authenticationStatus": "Y",
            "cavv": "string",
            "challengeIndicator": "no-preference",
            "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "eci": "string",
            "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
            "flow": "frictionless",
            "liability": "issuer",
            "schemeEci": 5,
            "version": "2.2.0",
            "xid": "string",
          },
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "customer": Object {
          "device": Object {
            "ipAddressCountryCode": "BE",
          },
        },
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "mobilePaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "network": "string",
          "paymentData": Object {
            "dpan": "string",
            "expiryDate": 529,
          },
          "paymentProductId": 840,
          "threeDSecureResults": Object {
            "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "appliedExemption": "low-value",
            "authenticationStatus": "Y",
            "cavv": "string",
            "challengeIndicator": "no-preference",
            "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "eci": "string",
            "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
            "flow": "frictionless",
            "liability": "issuer",
            "schemeEci": 5,
            "version": "2.2.0",
            "xid": "string",
          },
        },
        "paymentMethod": "string",
        "redirectPaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "customerBankAccount": Object {
            "accountHolderName": "John Doe",
            "bic": "BOHIUS77",
            "iban": "BE01 0123 4567 8910",
          },
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentOption": "string",
          "paymentProduct5001SpecificOutput": Object {
            "authorisationCode": "string",
          },
          "paymentProduct5402SpecificOutput": Object {
            "brand": "string",
          },
          "paymentProduct5500SpecificOutput": Object {
            "paymentEndDate": "string",
            "paymentReference": "string",
            "paymentStartDate": "string",
          },
          "paymentProduct840SpecificOutput": Object {
            "billingAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "customerAccount": Object {
              "accountId": "customer-account@email.com",
              "companyName": "Customer Company Name",
              "countryCode": "BE",
              "customerAccountStatus": "verified",
              "customerAddressStatus": "confirmed",
              "firstName": "John",
              "payerId": "RRCYJUTFJGZTA",
              "surname": "Doe",
            },
            "customerAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "protectionEligibility": Object {
              "eligibility": "Eligible",
              "type": "ItemNotReceivedEligible",
            },
          },
          "paymentProductId": 840,
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "references": Object {
          "merchantParameters": "SessionID=126548354&ShopperID=73541312",
          "merchantReference": "your-order-6372",
        },
        "sepaDirectDebitPaymentMethodSpecificOutput": Object {
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentProduct771SpecificOutput": Object {
            "mandateReference": "string",
          },
          "paymentProductId": 840,
        },
        "surchargeSpecificOutput": Object {
          "mode": "pass-through",
          "surchargeAmount": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "surchargeRate": Object {
            "adValoremRate": 2.5,
            "specificRate": 20,
            "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
            "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
          },
        },
      },
      "status": "CREATED",
      "statusOutput": Object {
        "errors": Array [
          Object {
            "category": "PAYMENT_PLATFORM_ERROR",
            "code": 50001130,
            "errorCode": 50001130,
            "httpStatusCode": 404,
            "id": "UNKNOWN_PAYMENT_ID",
            "message": "Authorisation declined",
            "propertyName": "paymentId",
            "retriable": true,
          },
        ],
        "isAuthorized": true,
        "isCancellable": true,
        "isRefundable": true,
        "statusCategory": "CREATED",
        "statusCode": -2147483648,
        "statusCodeChangeDateTime": "string",
      },
    },
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Promises it can capture a payment 1`] = `
Object {
  "body": Object {
    "captureOutput": Object {
      "acquiredAmount": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountPaid": -9223372036854776000,
      "cardPaymentMethodSpecificOutput": Object {
        "acquirerInformation": Object {
          "name": "string",
        },
        "authenticatedAmount": -9223372036854776000,
        "authorisationCode": "string",
        "card": Object {
          "bin": "string",
          "cardNumber": "string",
          "countryCode": "BE",
          "expiryDate": 529,
        },
        "currencyConversion": Object {
          "acceptedByUser": true,
          "proposal": Object {
            "baseAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
            "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
            "disclaimerReceipt": "",
            "rate": Object {
              "exchangeRate": 1.57,
              "invertedExchangeRate": 0.63694,
              "markUpRate": 3.12,
              "quotationDateTime": "2021-07-21T08:00:00Z",
              "source": "European Central Bank",
            },
            "targetAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
          },
        },
        "externalTokenLinked": Object {
          "ComputedToken": "string",
          "GTSComputedToken": "string",
          "GeneratedToken": "string",
        },
        "fraudResults": Object {
          "avsResult": "string",
          "cvvResult": "string",
          "fraudServiceResult": "string",
        },
        "initialSchemeTransactionId": "string",
        "paymentOption": "string",
        "paymentProduct3208SpecificOutput": Object {
          "buyerCompliantBankMessage": "string",
        },
        "paymentProduct3209SpecificOutput": Object {
          "buyerCompliantBankMessage": "string",
        },
        "paymentProductId": 840,
        "schemeReferenceData": "string",
        "threeDSecureResults": Object {
          "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "appliedExemption": "low-value",
          "authenticationStatus": "Y",
          "cavv": "string",
          "challengeIndicator": "no-preference",
          "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "eci": "string",
          "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
          "flow": "frictionless",
          "liability": "issuer",
          "schemeEci": 5,
          "version": "2.2.0",
          "xid": "string",
        },
        "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      },
      "merchantParameters": "SessionID=126548354&ShopperID=73541312",
      "mobilePaymentMethodSpecificOutput": Object {
        "authorisationCode": "string",
        "fraudResults": Object {
          "avsResult": "string",
          "cvvResult": "string",
          "fraudServiceResult": "string",
        },
        "network": "string",
        "paymentData": Object {
          "dpan": "string",
          "expiryDate": 529,
        },
        "paymentProductId": 840,
        "threeDSecureResults": Object {
          "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "appliedExemption": "low-value",
          "authenticationStatus": "Y",
          "cavv": "string",
          "challengeIndicator": "no-preference",
          "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "eci": "string",
          "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
          "flow": "frictionless",
          "liability": "issuer",
          "schemeEci": 5,
          "version": "2.2.0",
          "xid": "string",
        },
      },
      "paymentMethod": "string",
      "redirectPaymentMethodSpecificOutput": Object {
        "authorisationCode": "string",
        "customerBankAccount": Object {
          "accountHolderName": "John Doe",
          "bic": "BOHIUS77",
          "iban": "BE01 0123 4567 8910",
        },
        "fraudResults": Object {
          "fraudServiceResult": "string",
        },
        "paymentOption": "string",
        "paymentProduct5001SpecificOutput": Object {
          "authorisationCode": "string",
        },
        "paymentProduct5402SpecificOutput": Object {
          "brand": "string",
        },
        "paymentProduct5500SpecificOutput": Object {
          "paymentEndDate": "string",
          "paymentReference": "string",
          "paymentStartDate": "string",
        },
        "paymentProduct840SpecificOutput": Object {
          "billingAddress": Object {
            "additionalInfo": "floor 9",
            "city": "Zaventem",
            "countryCode": "BE",
            "houseNumber": 3,
            "state": "string",
            "street": "Da Vinci street",
            "zip": 1930,
          },
          "customerAccount": Object {
            "accountId": "customer-account@email.com",
            "companyName": "Customer Company Name",
            "countryCode": "BE",
            "customerAccountStatus": "verified",
            "customerAddressStatus": "confirmed",
            "firstName": "John",
            "payerId": "RRCYJUTFJGZTA",
            "surname": "Doe",
          },
          "customerAddress": Object {
            "additionalInfo": "floor 9",
            "city": "Zaventem",
            "countryCode": "BE",
            "houseNumber": 3,
            "state": "string",
            "street": "Da Vinci street",
            "zip": 1930,
          },
          "protectionEligibility": Object {
            "eligibility": "Eligible",
            "type": "ItemNotReceivedEligible",
          },
        },
        "paymentProductId": 840,
        "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      },
      "references": Object {
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "merchantReference": "your-order-6372",
      },
      "sepaDirectDebitPaymentMethodSpecificOutput": Object {
        "fraudResults": Object {
          "fraudServiceResult": "string",
        },
        "paymentProduct771SpecificOutput": Object {
          "mandateReference": "string",
        },
        "paymentProductId": 840,
      },
      "surchargeSpecificOutput": Object {
        "mode": "pass-through",
        "surchargeAmount": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "surchargeRate": Object {
          "adValoremRate": 2.5,
          "specificRate": 20,
          "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
          "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
        },
      },
    },
    "id": "3066019730_1",
    "status": "CREATED",
    "statusOutput": Object {
      "statusCode": -2147483648,
    },
  },
  "isSuccess": true,
  "status": 201,
}
`;

exports[`Payments Promises it can create a payment 1`] = `
Object {
  "body": Object {
    "creationOutput": Object {
      "externalReference": "string",
      "isNewToken": true,
      "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      "tokenizationSucceeded": true,
    },
    "merchantAction": Object {
      "actionType": "string",
      "redirectData": Object {
        "RETURNMAC": "fecab85c-9b0e-42ee-a9d9-ebb69b0c2eb0",
        "redirectURL": "string",
      },
      "showFormData": Object {
        "paymentProduct5404": Object {
          "appSwitchLink": "string",
          "qrCodeUrl": "string",
        },
        "paymentProduct5407": Object {
          "pairingToken": "string",
          "qrCode": "string",
        },
      },
    },
    "payment": Object {
      "hostedCheckoutSpecificOutput": Object {
        "hostedCheckoutId": 3066019730,
        "variant": "my-custom-template.html",
      },
      "id": "3066019730_0",
      "paymentOutput": Object {
        "acquiredAmount": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "amountOfMoney": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "amountPaid": -9223372036854776000,
        "cardPaymentMethodSpecificOutput": Object {
          "acquirerInformation": Object {
            "name": "string",
          },
          "authenticatedAmount": -9223372036854776000,
          "authorisationCode": "string",
          "card": Object {
            "bin": "string",
            "cardNumber": "string",
            "countryCode": "BE",
            "expiryDate": 529,
          },
          "currencyConversion": Object {
            "acceptedByUser": true,
            "proposal": Object {
              "baseAmount": Object {
                "amount": 1000,
                "currencyCode": "EUR",
              },
              "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
              "disclaimerReceipt": "",
              "rate": Object {
                "exchangeRate": 1.57,
                "invertedExchangeRate": 0.63694,
                "markUpRate": 3.12,
                "quotationDateTime": "2021-07-21T08:00:00Z",
                "source": "European Central Bank",
              },
              "targetAmount": Object {
                "amount": 1000,
                "currencyCode": "EUR",
              },
            },
          },
          "externalTokenLinked": Object {
            "ComputedToken": "string",
            "GTSComputedToken": "string",
            "GeneratedToken": "string",
          },
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "initialSchemeTransactionId": "string",
          "paymentOption": "string",
          "paymentProduct3208SpecificOutput": Object {
            "buyerCompliantBankMessage": "string",
          },
          "paymentProduct3209SpecificOutput": Object {
            "buyerCompliantBankMessage": "string",
          },
          "paymentProductId": 840,
          "schemeReferenceData": "string",
          "threeDSecureResults": Object {
            "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "appliedExemption": "low-value",
            "authenticationStatus": "Y",
            "cavv": "string",
            "challengeIndicator": "no-preference",
            "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "eci": "string",
            "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
            "flow": "frictionless",
            "liability": "issuer",
            "schemeEci": 5,
            "version": "2.2.0",
            "xid": "string",
          },
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "customer": Object {
          "device": Object {
            "ipAddressCountryCode": "BE",
          },
        },
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "mobilePaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "fraudResults": Object {
            "avsResult": "string",
            "cvvResult": "string",
            "fraudServiceResult": "string",
          },
          "network": "string",
          "paymentData": Object {
            "dpan": "string",
            "expiryDate": 529,
          },
          "paymentProductId": 840,
          "threeDSecureResults": Object {
            "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "appliedExemption": "low-value",
            "authenticationStatus": "Y",
            "cavv": "string",
            "challengeIndicator": "no-preference",
            "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
            "eci": "string",
            "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
            "flow": "frictionless",
            "liability": "issuer",
            "schemeEci": 5,
            "version": "2.2.0",
            "xid": "string",
          },
        },
        "paymentMethod": "string",
        "redirectPaymentMethodSpecificOutput": Object {
          "authorisationCode": "string",
          "customerBankAccount": Object {
            "accountHolderName": "John Doe",
            "bic": "BOHIUS77",
            "iban": "BE01 0123 4567 8910",
          },
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentOption": "string",
          "paymentProduct5001SpecificOutput": Object {
            "authorisationCode": "string",
          },
          "paymentProduct5402SpecificOutput": Object {
            "brand": "string",
          },
          "paymentProduct5500SpecificOutput": Object {
            "paymentEndDate": "string",
            "paymentReference": "string",
            "paymentStartDate": "string",
          },
          "paymentProduct840SpecificOutput": Object {
            "billingAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "customerAccount": Object {
              "accountId": "customer-account@email.com",
              "companyName": "Customer Company Name",
              "countryCode": "BE",
              "customerAccountStatus": "verified",
              "customerAddressStatus": "confirmed",
              "firstName": "John",
              "payerId": "RRCYJUTFJGZTA",
              "surname": "Doe",
            },
            "customerAddress": Object {
              "additionalInfo": "floor 9",
              "city": "Zaventem",
              "countryCode": "BE",
              "houseNumber": 3,
              "state": "string",
              "street": "Da Vinci street",
              "zip": 1930,
            },
            "protectionEligibility": Object {
              "eligibility": "Eligible",
              "type": "ItemNotReceivedEligible",
            },
          },
          "paymentProductId": 840,
          "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
        },
        "references": Object {
          "merchantParameters": "SessionID=126548354&ShopperID=73541312",
          "merchantReference": "your-order-6372",
        },
        "sepaDirectDebitPaymentMethodSpecificOutput": Object {
          "fraudResults": Object {
            "fraudServiceResult": "string",
          },
          "paymentProduct771SpecificOutput": Object {
            "mandateReference": "string",
          },
          "paymentProductId": 840,
        },
        "surchargeSpecificOutput": Object {
          "mode": "pass-through",
          "surchargeAmount": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "surchargeRate": Object {
            "adValoremRate": 2.5,
            "specificRate": 20,
            "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
            "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
          },
        },
      },
      "status": "CREATED",
      "statusOutput": Object {
        "errors": Array [
          Object {
            "category": "PAYMENT_PLATFORM_ERROR",
            "code": 50001130,
            "errorCode": 50001130,
            "httpStatusCode": 404,
            "id": "UNKNOWN_PAYMENT_ID",
            "message": "Authorisation declined",
            "propertyName": "paymentId",
            "retriable": true,
          },
        ],
        "isAuthorized": true,
        "isCancellable": true,
        "isRefundable": true,
        "statusCategory": "CREATED",
        "statusCode": -2147483648,
        "statusCodeChangeDateTime": "string",
      },
    },
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Promises it can get a payment 1`] = `
Object {
  "body": Object {
    "hostedCheckoutSpecificOutput": Object {
      "hostedCheckoutId": 3066019730,
      "variant": "my-custom-template.html",
    },
    "id": "3066019730_0",
    "paymentOutput": Object {
      "acquiredAmount": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountPaid": -9223372036854776000,
      "cardPaymentMethodSpecificOutput": Object {
        "acquirerInformation": Object {
          "name": "string",
        },
        "authenticatedAmount": -9223372036854776000,
        "authorisationCode": "string",
        "card": Object {
          "bin": "string",
          "cardNumber": "string",
          "countryCode": "BE",
          "expiryDate": 529,
        },
        "currencyConversion": Object {
          "acceptedByUser": true,
          "proposal": Object {
            "baseAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
            "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
            "disclaimerReceipt": "",
            "rate": Object {
              "exchangeRate": 1.57,
              "invertedExchangeRate": 0.63694,
              "markUpRate": 3.12,
              "quotationDateTime": "2021-07-21T08:00:00Z",
              "source": "European Central Bank",
            },
            "targetAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
          },
        },
        "externalTokenLinked": Object {
          "ComputedToken": "string",
          "GTSComputedToken": "string",
          "GeneratedToken": "string",
        },
        "fraudResults": Object {
          "avsResult": "string",
          "cvvResult": "string",
          "fraudServiceResult": "string",
        },
        "initialSchemeTransactionId": "string",
        "paymentOption": "string",
        "paymentProduct3208SpecificOutput": Object {
          "buyerCompliantBankMessage": "string",
        },
        "paymentProduct3209SpecificOutput": Object {
          "buyerCompliantBankMessage": "string",
        },
        "paymentProductId": 840,
        "schemeReferenceData": "string",
        "threeDSecureResults": Object {
          "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "appliedExemption": "low-value",
          "authenticationStatus": "Y",
          "cavv": "string",
          "challengeIndicator": "no-preference",
          "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "eci": "string",
          "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
          "flow": "frictionless",
          "liability": "issuer",
          "schemeEci": 5,
          "version": "2.2.0",
          "xid": "string",
        },
        "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      },
      "customer": Object {
        "device": Object {
          "ipAddressCountryCode": "BE",
        },
      },
      "merchantParameters": "SessionID=126548354&ShopperID=73541312",
      "mobilePaymentMethodSpecificOutput": Object {
        "authorisationCode": "string",
        "fraudResults": Object {
          "avsResult": "string",
          "cvvResult": "string",
          "fraudServiceResult": "string",
        },
        "network": "string",
        "paymentData": Object {
          "dpan": "string",
          "expiryDate": 529,
        },
        "paymentProductId": 840,
        "threeDSecureResults": Object {
          "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "appliedExemption": "low-value",
          "authenticationStatus": "Y",
          "cavv": "string",
          "challengeIndicator": "no-preference",
          "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
          "eci": "string",
          "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
          "flow": "frictionless",
          "liability": "issuer",
          "schemeEci": 5,
          "version": "2.2.0",
          "xid": "string",
        },
      },
      "paymentMethod": "string",
      "redirectPaymentMethodSpecificOutput": Object {
        "authorisationCode": "string",
        "customerBankAccount": Object {
          "accountHolderName": "John Doe",
          "bic": "BOHIUS77",
          "iban": "BE01 0123 4567 8910",
        },
        "fraudResults": Object {
          "fraudServiceResult": "string",
        },
        "paymentOption": "string",
        "paymentProduct5001SpecificOutput": Object {
          "authorisationCode": "string",
        },
        "paymentProduct5402SpecificOutput": Object {
          "brand": "string",
        },
        "paymentProduct5500SpecificOutput": Object {
          "paymentEndDate": "string",
          "paymentReference": "string",
          "paymentStartDate": "string",
        },
        "paymentProduct840SpecificOutput": Object {
          "billingAddress": Object {
            "additionalInfo": "floor 9",
            "city": "Zaventem",
            "countryCode": "BE",
            "houseNumber": 3,
            "state": "string",
            "street": "Da Vinci street",
            "zip": 1930,
          },
          "customerAccount": Object {
            "accountId": "customer-account@email.com",
            "companyName": "Customer Company Name",
            "countryCode": "BE",
            "customerAccountStatus": "verified",
            "customerAddressStatus": "confirmed",
            "firstName": "John",
            "payerId": "RRCYJUTFJGZTA",
            "surname": "Doe",
          },
          "customerAddress": Object {
            "additionalInfo": "floor 9",
            "city": "Zaventem",
            "countryCode": "BE",
            "houseNumber": 3,
            "state": "string",
            "street": "Da Vinci street",
            "zip": 1930,
          },
          "protectionEligibility": Object {
            "eligibility": "Eligible",
            "type": "ItemNotReceivedEligible",
          },
        },
        "paymentProductId": 840,
        "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
      },
      "references": Object {
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "merchantReference": "your-order-6372",
      },
      "sepaDirectDebitPaymentMethodSpecificOutput": Object {
        "fraudResults": Object {
          "fraudServiceResult": "string",
        },
        "paymentProduct771SpecificOutput": Object {
          "mandateReference": "string",
        },
        "paymentProductId": 840,
      },
      "surchargeSpecificOutput": Object {
        "mode": "pass-through",
        "surchargeAmount": Object {
          "amount": 1000,
          "currencyCode": "EUR",
        },
        "surchargeRate": Object {
          "adValoremRate": 2.5,
          "specificRate": 20,
          "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
          "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
        },
      },
    },
    "status": "CREATED",
    "statusOutput": Object {
      "errors": Array [
        Object {
          "category": "PAYMENT_PLATFORM_ERROR",
          "code": 50001130,
          "errorCode": 50001130,
          "httpStatusCode": 404,
          "id": "UNKNOWN_PAYMENT_ID",
          "message": "Authorisation declined",
          "propertyName": "paymentId",
          "retriable": true,
        },
      ],
      "isAuthorized": true,
      "isCancellable": true,
      "isRefundable": true,
      "statusCategory": "CREATED",
      "statusCode": -2147483648,
      "statusCodeChangeDateTime": "string",
    },
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Promises it can get a refunds 1`] = `
Object {
  "body": Object {
    "refunds": Array [
      Object {
        "id": "3066019730_1",
        "refundOutput": Object {
          "amountOfMoney": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "amountPaid": -9223372036854776000,
          "cardRefundMethodSpecificOutput": Object {
            "currencyConversion": Object {
              "acceptedByUser": true,
              "proposal": Object {
                "baseAmount": Object {
                  "amount": 1000,
                  "currencyCode": "EUR",
                },
                "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
                "disclaimerReceipt": "",
                "rate": Object {
                  "exchangeRate": 1.57,
                  "invertedExchangeRate": 0.63694,
                  "markUpRate": 3.12,
                  "quotationDateTime": "2021-07-21T08:00:00Z",
                  "source": "European Central Bank",
                },
                "targetAmount": Object {
                  "amount": 1000,
                  "currencyCode": "EUR",
                },
              },
            },
            "totalAmountPaid": -9223372036854776000,
            "totalAmountRefunded": -9223372036854776000,
          },
          "eWalletRefundMethodSpecificOutput": Object {
            "paymentProduct840SpecificOutput": Object {
              "customerAccount": Object {
                "customerAccountStatus": "string",
                "customerAddressStatus": "string",
                "payerId": "RRCYJUTFJGZTA",
              },
            },
            "totalAmountPaid": -9223372036854776000,
            "totalAmountRefunded": -9223372036854776000,
          },
          "merchantParameters": "SessionID=126548354&ShopperID=73541312",
          "mobileRefundMethodSpecificOutput": Object {
            "network": "string",
            "totalAmountPaid": -9223372036854776000,
            "totalAmountRefunded": -9223372036854776000,
          },
          "paymentMethod": "string",
          "redirectRefundMethodSpecificOutput": Object {
            "totalAmountPaid": -9223372036854776000,
            "totalAmountRefunded": -9223372036854776000,
          },
          "references": Object {
            "merchantParameters": "SessionID=126548354&ShopperID=73541312",
            "merchantReference": "your-order-6372",
          },
        },
        "status": "CREATED",
        "statusOutput": Object {
          "errors": Array [
            Object {
              "category": "PAYMENT_PLATFORM_ERROR",
              "code": 50001130,
              "errorCode": 50001130,
              "httpStatusCode": 404,
              "id": "UNKNOWN_PAYMENT_ID",
              "message": "Authorisation declined",
              "propertyName": "paymentId",
              "retriable": true,
            },
          ],
          "isCancellable": true,
          "statusCategory": "CREATED",
          "statusCode": -2147483648,
          "statusCodeChangeDateTime": "string",
        },
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Promises it can get captures 1`] = `
Object {
  "body": Object {
    "captures": Array [
      Object {
        "captureOutput": Object {
          "acquiredAmount": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "amountOfMoney": Object {
            "amount": 1000,
            "currencyCode": "EUR",
          },
          "amountPaid": -9223372036854776000,
          "cardPaymentMethodSpecificOutput": Object {
            "acquirerInformation": Object {
              "name": "string",
            },
            "authenticatedAmount": -9223372036854776000,
            "authorisationCode": "string",
            "card": Object {
              "bin": "string",
              "cardNumber": "string",
              "countryCode": "BE",
              "expiryDate": 529,
            },
            "currencyConversion": Object {
              "acceptedByUser": true,
              "proposal": Object {
                "baseAmount": Object {
                  "amount": 1000,
                  "currencyCode": "EUR",
                },
                "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
                "disclaimerReceipt": "",
                "rate": Object {
                  "exchangeRate": 1.57,
                  "invertedExchangeRate": 0.63694,
                  "markUpRate": 3.12,
                  "quotationDateTime": "2021-07-21T08:00:00Z",
                  "source": "European Central Bank",
                },
                "targetAmount": Object {
                  "amount": 1000,
                  "currencyCode": "EUR",
                },
              },
            },
            "externalTokenLinked": Object {
              "ComputedToken": "string",
              "GTSComputedToken": "string",
              "GeneratedToken": "string",
            },
            "fraudResults": Object {
              "avsResult": "string",
              "cvvResult": "string",
              "fraudServiceResult": "string",
            },
            "initialSchemeTransactionId": "string",
            "paymentOption": "string",
            "paymentProduct3208SpecificOutput": Object {
              "buyerCompliantBankMessage": "string",
            },
            "paymentProduct3209SpecificOutput": Object {
              "buyerCompliantBankMessage": "string",
            },
            "paymentProductId": 840,
            "schemeReferenceData": "string",
            "threeDSecureResults": Object {
              "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
              "appliedExemption": "low-value",
              "authenticationStatus": "Y",
              "cavv": "string",
              "challengeIndicator": "no-preference",
              "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
              "eci": "string",
              "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
              "flow": "frictionless",
              "liability": "issuer",
              "schemeEci": 5,
              "version": "2.2.0",
              "xid": "string",
            },
            "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
          },
          "merchantParameters": "SessionID=126548354&ShopperID=73541312",
          "mobilePaymentMethodSpecificOutput": Object {
            "authorisationCode": "string",
            "fraudResults": Object {
              "avsResult": "string",
              "cvvResult": "string",
              "fraudServiceResult": "string",
            },
            "network": "string",
            "paymentData": Object {
              "dpan": "string",
              "expiryDate": 529,
            },
            "paymentProductId": 840,
            "threeDSecureResults": Object {
              "acsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
              "appliedExemption": "low-value",
              "authenticationStatus": "Y",
              "cavv": "string",
              "challengeIndicator": "no-preference",
              "dsTransactionId": "3E1D57DF-8DB1-4614-91D5-B11962519703",
              "eci": "string",
              "exemptionEngineFlow": "not-applicable-challenge-indicator-received",
              "flow": "frictionless",
              "liability": "issuer",
              "schemeEci": 5,
              "version": "2.2.0",
              "xid": "string",
            },
          },
          "paymentMethod": "string",
          "redirectPaymentMethodSpecificOutput": Object {
            "authorisationCode": "string",
            "customerBankAccount": Object {
              "accountHolderName": "John Doe",
              "bic": "BOHIUS77",
              "iban": "BE01 0123 4567 8910",
            },
            "fraudResults": Object {
              "fraudServiceResult": "string",
            },
            "paymentOption": "string",
            "paymentProduct5001SpecificOutput": Object {
              "authorisationCode": "string",
            },
            "paymentProduct5402SpecificOutput": Object {
              "brand": "string",
            },
            "paymentProduct5500SpecificOutput": Object {
              "paymentEndDate": "string",
              "paymentReference": "string",
              "paymentStartDate": "string",
            },
            "paymentProduct840SpecificOutput": Object {
              "billingAddress": Object {
                "additionalInfo": "floor 9",
                "city": "Zaventem",
                "countryCode": "BE",
                "houseNumber": 3,
                "state": "string",
                "street": "Da Vinci street",
                "zip": 1930,
              },
              "customerAccount": Object {
                "accountId": "customer-account@email.com",
                "companyName": "Customer Company Name",
                "countryCode": "BE",
                "customerAccountStatus": "verified",
                "customerAddressStatus": "confirmed",
                "firstName": "John",
                "payerId": "RRCYJUTFJGZTA",
                "surname": "Doe",
              },
              "customerAddress": Object {
                "additionalInfo": "floor 9",
                "city": "Zaventem",
                "countryCode": "BE",
                "houseNumber": 3,
                "state": "string",
                "street": "Da Vinci street",
                "zip": 1930,
              },
              "protectionEligibility": Object {
                "eligibility": "Eligible",
                "type": "ItemNotReceivedEligible",
              },
            },
            "paymentProductId": 840,
            "token": "0ca037cc-9079-4df7-8f6f-f2a3443ee521",
          },
          "references": Object {
            "merchantParameters": "SessionID=126548354&ShopperID=73541312",
            "merchantReference": "your-order-6372",
          },
          "sepaDirectDebitPaymentMethodSpecificOutput": Object {
            "fraudResults": Object {
              "fraudServiceResult": "string",
            },
            "paymentProduct771SpecificOutput": Object {
              "mandateReference": "string",
            },
            "paymentProductId": 840,
          },
          "surchargeSpecificOutput": Object {
            "mode": "pass-through",
            "surchargeAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
            "surchargeRate": Object {
              "adValoremRate": 2.5,
              "specificRate": 20,
              "surchargeProductTypeId": "VISA_DOMESTIC_DEBIT",
              "surchargeProductTypeVersion": "8667F70E-9DDB-41FF-8822-A00FC43FCCAF",
            },
          },
        },
        "id": "string",
        "status": "CREATED",
        "statusOutput": Object {
          "statusCode": -2147483648,
        },
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payments Promises it can refund a payment 1`] = `
Object {
  "body": Object {
    "id": "3066019730_1",
    "refundOutput": Object {
      "amountOfMoney": Object {
        "amount": 1000,
        "currencyCode": "EUR",
      },
      "amountPaid": -9223372036854776000,
      "cardRefundMethodSpecificOutput": Object {
        "currencyConversion": Object {
          "acceptedByUser": true,
          "proposal": Object {
            "baseAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
            "disclaimerDisplay": "Make sure you understand the costs of currency conversion as they may be different ...",
            "disclaimerReceipt": "",
            "rate": Object {
              "exchangeRate": 1.57,
              "invertedExchangeRate": 0.63694,
              "markUpRate": 3.12,
              "quotationDateTime": "2021-07-21T08:00:00Z",
              "source": "European Central Bank",
            },
            "targetAmount": Object {
              "amount": 1000,
              "currencyCode": "EUR",
            },
          },
        },
        "totalAmountPaid": -9223372036854776000,
        "totalAmountRefunded": -9223372036854776000,
      },
      "eWalletRefundMethodSpecificOutput": Object {
        "paymentProduct840SpecificOutput": Object {
          "customerAccount": Object {
            "customerAccountStatus": "string",
            "customerAddressStatus": "string",
            "payerId": "RRCYJUTFJGZTA",
          },
        },
        "totalAmountPaid": -9223372036854776000,
        "totalAmountRefunded": -9223372036854776000,
      },
      "merchantParameters": "SessionID=126548354&ShopperID=73541312",
      "mobileRefundMethodSpecificOutput": Object {
        "network": "string",
        "totalAmountPaid": -9223372036854776000,
        "totalAmountRefunded": -9223372036854776000,
      },
      "paymentMethod": "string",
      "redirectRefundMethodSpecificOutput": Object {
        "totalAmountPaid": -9223372036854776000,
        "totalAmountRefunded": -9223372036854776000,
      },
      "references": Object {
        "merchantParameters": "SessionID=126548354&ShopperID=73541312",
        "merchantReference": "your-order-6372",
      },
    },
    "status": "CREATED",
    "statusOutput": Object {
      "errors": Array [
        Object {
          "category": "PAYMENT_PLATFORM_ERROR",
          "code": 50001130,
          "errorCode": 50001130,
          "httpStatusCode": 404,
          "id": "UNKNOWN_PAYMENT_ID",
          "message": "Authorisation declined",
          "propertyName": "paymentId",
          "retriable": true,
        },
      ],
      "isCancellable": true,
      "statusCategory": "CREATED",
      "statusCode": -2147483648,
      "statusCodeChangeDateTime": "string",
    },
  },
  "isSuccess": true,
  "status": 201,
}
`;
